<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2021 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
  <string translatable="false" name="app_name">p2D Capture</string>
  <string translatable="false" name="start_recording_button_text">START</string>
  <string translatable="false" name="stop_recording_button_text">STOP</string>
  <string translatable="false" name="snap_button_text">SNAP</string>
  <string translatable="false" name="auto_snap_off_text">AUTO off</string>
  <string translatable="false" name="auto_snap_on_text">AUTO on</string>
  <string translatable="false" name="playback_button_text">PLAY</string>
  <string translatable="false" name="playback_path_text">Last: %1$s</string>
  <string translatable="false" name="recording_path_text">Rec: %1$s</string>
</resources>
